--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
             <artifactId>commons-text</artifactId>
             <version>1.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.marlonlom</groupId>
+            <artifactId>timeago</artifactId>
+            <version>4.0.3</version>
+        </dependency>
     </dependencies>
 
     <build>
